# backend/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a sample Gin server with Swagger",
-        "title": "Gin Example API",
+        "title": "BMSTU IT Courses API",
         "contact": {},
         "version": "1.0"
     },
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginRequest"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.LoginRequest"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.AuthTokens"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.AuthTokens"
                         }
                     },
                     "400": {
@@ -73,7 +73,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RefreshRequest"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.RefreshRequest"
                         }
                     }
                 ],
@@ -112,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RefreshRequest"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.RefreshRequest"
                         }
                     }
                 ],
@@ -120,7 +120,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.AuthTokens"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.AuthTokens"
                         }
                     },
                     "400": {
@@ -139,6 +139,26 @@
             }
         },
         "/users": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get all users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.UserResponse"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -157,7 +177,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateUserRequest"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.CreateUserRequest"
                         }
                     }
                 ],
@@ -165,7 +185,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserResponse"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.UserResponse"
                         }
                     },
                     "400": {
@@ -205,7 +225,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserResponse"
+                            "$ref": "#/definitions/github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.UserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
                         }
                     },
                     "404": {
@@ -215,11 +241,113 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Delete user by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (uuid)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update user by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID (uuid)",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User update data",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "dto.AuthTokens": {
+        "gin.H": {
+            "type": "object",
+            "additionalProperties": {}
+        },
+        "github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.AuthTokens": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -230,7 +358,7 @@
                 }
             }
         },
-        "dto.CreateUserRequest": {
+        "github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.CreateUserRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -280,7 +408,8 @@
                 }
             }
         },
-        "dto.LoginRequest": {
+        "github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.LoginRequest": {
+            "description": "Login request payload",
             "type": "object",
             "required": [
                 "email",
@@ -288,14 +417,16 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "admin@mai.ru"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "qwe123"
                 }
             }
         },
-        "dto.RefreshRequest": {
+        "github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.RefreshRequest": {
             "type": "object",
             "required": [
                 "refresh_token"
@@ -306,7 +437,7 @@
                 }
             }
         },
-        "dto.UserResponse": {
+        "github_com_maxcore25_bmstu-it-courses_backend_internal_auth_dto.UserResponse": {
             "type": "object",
             "properties": {
                 "email": {
@@ -331,10 +462,6 @@
                     "type": "string"
                 }
             }
-        },
-        "gin.H": {
-            "type": "object",
-            "additionalProperties": {}
         }
     }
 }
