# backend/internal/auth/dto/login_request.go
@@ -1,6 +1,9 @@
 package dto
 
+// LoginRequest represents user login data.
+// @Description Login request payload
+// @name LoginRequest
 type LoginRequest struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required"`
+	Email    string `json:"email" binding:"required,email" example:"admin@mai.ru"`
+	Password string `json:"password" binding:"required" example:"qwe123"`
 }
